compiler/testData/diagnostics/tests/multiplatform/checkNoActualForExpectInLastModule.fir.kt
// MUTE_EXPECT_ACTUAL_CLASSES_WARNING
// ISSUE: KT-58483
// MODULE: jvm
// FILE: jvm.kt
<!NO_ACTUAL_FOR_EXPECT!>expect class A<!>
